<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>iut.universite-cote-dazur</groupId> <!-- à changer par le nom du groupe -->
    <artifactId>demo-resources-javafx-multimodule</artifactId> <!-- et le nom du projet -->
    <version>1.0</version>

	<modules>
		<module>commun</module>
		<module>noyaufonctionnel</module>
        <module>ihm</module>
        <module>lanceur</module>
	</modules>
	
	<packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
        <compiler.source>21</compiler.source>
        <compiler.target>21</compiler.target>
    </properties>


    <build>

        <plugins>


            <!-- pour que maven lance les tests junit 5 -->


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>
                        -XX:+EnableDynamicAgentLoading
                    </argLine>
                </configuration>
            </plugin>


            <!-- la génération de la  javadoc s'utilise avec "mvn site" -->


           


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <source>21</source> <!-- éventuellement à changer : version de java -->
                    <target>21</target> <!-- éventuellement à changer : version de java -->
                </configuration>
            </plugin>



        </plugins>
    </build>


    <dependencies>


    </dependencies>

</project>